examples/valid/program56.c
int main(void) {
    char c;
    c = 'A';
    return 0;
}

