examples/invalid/program15.c
int main(void) {
    int x;
    x = 5;
    if (x > 0) int y;
    return 0;
}

